[tool.poetry]
name = "rsb-data-analytics"
version = "0.1.0"
description = "A web dashboard of final presentation."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rsb_data_analytics"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.23"
click = "^8.1.7"
alembic = "^1.13.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
